# OmniView

./: .pre-commit-config.yaml  README.md  README.ru.md  app.py  example.py  pyproject.toml
.github/workflows/: publish.yml
examples/: ip_example.py  usb_example.py
gui/: camera_widget.py
src/omniview/: __init__.py  manager.py  managers.py  multiplex.py  sequential.py  threads.py  usb_topology.py  v4l2_backend.py
src/omniview/gui/: __init__.py  camera_widget.py  dashboard.py  filters.py  main.py  manager_bridge.py  settings_panel.py  theme.py  widgets.py
tests/: conftest.py  test_gui.py  test_managers.py  test_multiplex.py  test_threads.py  test_usb_topology.py
